[gd_scene load_steps=4 format=3 uid="uid://d1a6mmn2l1r60"]

[ext_resource type="Script" path="res://scripts/camp.gd" id="1_bmpth"]
[ext_resource type="Texture2D" uid="uid://r7iiggph8lb" path="res://assets/Camp.png" id="2_iuc6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqqmr"]
size = Vector2(494, 130)

[node name="Camp" type="Node2D"]
process_mode = 3
script = ExtResource("1_bmpth")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iuc6k")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -82.0
offset_top = -90.0
offset_right = 111.0
offset_bottom = -67.0
text = "Click E to sit near the fire"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gqqmr")

[node name="SaveButton" type="Button" parent="."]
visible = false
offset_left = -46.0
offset_top = -100.0
offset_right = -2.0
offset_bottom = -69.0
text = "Save"

[node name="BackButton" type="Button" parent="."]
visible = false
offset_left = 17.3333
offset_top = -100.0
offset_right = 62.3333
offset_bottom = -69.0
text = "Back"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
